--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 		}
     
 	var Options = {
-		includeMarching = false,
-		includeTrainingExt = false
+		includeMarching : false,
+		includeTrainingExt : false
 	}
     //DebugTimer.start(); 
     try {
